# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2013-09-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix cloudi:timeout_milliseconds() and cloudi:priority()
    * Fixes for cloudi_service_db
    * Edoc documentation updated

2013-09-10 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make the scope script parallel to speedup the initial
      build process
    * Add initial version of cloudi_service_db, a simple in-memory database
    * Update trie

2013-09-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add support for update-deps of CloudI as a rebar dependency
    * Add an options list to cloudi_service_zeromq
    * Add the process_metadata option to cloudi_service_zeromq for
      tunneling RequestInfo and ResponseInfo within ZeroMQ requests
      automatically
    * Add endian configuration to cloudi_service_db_pgsql 
      for binary request responses
    * Add endian configuration to cloudi_service_zeromq
      for ZeroMQ service request metadata size integer encoding

2013-09-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Simplify the rebar integration by removing the version number from
      the installation path prefix when a configuration command line argument
      (--without-version) is provided
    * Simplify the hello_world3 example
    * Fix type problem in cloudi_service_db_cassandra
    * Make the configure script ZeroMQ path detection expect default cases

2013-09-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Move makefile "clean-configure" target to utilize the distclean target
    * Tweak example hello_world3 so that ERL_LIBS is not used

2013-08-28 Mahesh Paolini-Subramanya   <mahesh [at] dieswaytoofast (dot) com>

    * Merge cassandra database integration

2013-08-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix bugs in cloudi_service_tcp

2013-08-26 Michael Truog   <mjtruog [at] gmail (dot) com>
