@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2013-09-12 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Add CLOUDI_CONFIGURE_ARGS env variable for rebar usage
+
 2013-09-11 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Fix cloudi:timeout_milliseconds() and cloudi:priority()
